--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		@@include('./html/header.html')
 		<main class="main">
 			@@include('./html/first.html')
+			@@include('./html/about.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
