--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,12 +7,12 @@
 				</p>
 			</a>
 			<nav class="header__menu menu">
-				<ul class="reset menu__list">
+				<ul class="menu__list list-reset">
 					<li class="menu__item">
 						<a class="menu__link" href="#about">О нас</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link" href="#servise">Услуги</a>
+						<a class="menu__link" href="#services">Услуги</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link" href="#price">Стоимость</a>
