added section info

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 			@@include('./html/first.html')
 			@@include('./html/about.html')
 			@@include('./html/services.html')
+			@@include('./html/info.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
