--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,13 @@
 			@@include('./html/about.html')
 			@@include('./html/services.html')
 			@@include('./html/info.html')
+			@@include('./html/gallery.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
 
-
-	<script src="js/main.js"></script>
+	<script src="./js/mixitup.min.js"></script>
+	<script src="./js/main.min.js"></script>
 </body>
 
 </html>
