added quote sections

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 			@@include('./html/services.html')
 			@@include('./html/info.html')
 			@@include('./html/gallery.html')
+			@@include('./html/quote.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
