added sections video

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,13 @@
 			@@include('./html/info.html')
 			@@include('./html/gallery.html')
 			@@include('./html/quote.html')
+			@@include('./html/video.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
 
+	<script src="./js/jquery.min.js"></script>
+	<script src="./js/fancybox.min.js"></script>
 	<script src="./js/mixitup.min.js"></script>
 	<script src="./js/main.min.js"></script>
 </body>
