--- a/src/html/head.html
+++ b/src/html/head.html
@@ -3,5 +3,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/normalize.min.css">
 <link rel="stylesheet" href="css/fancybox.min.css">
+<link rel="stylesheet" href="css/slick.min.css">
 <link rel="stylesheet" href="css/style.min.css">
 <title>@@title</title>
