--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 			@@include('./html/gallery.html')
 			@@include('./html/quote.html')
 			@@include('./html/video.html')
+			@@include('./html/blog.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
@@ -25,6 +26,7 @@
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/fancybox.min.js"></script>
 	<script src="./js/mixitup.min.js"></script>
+	<script src="./js/slick.min.js"></script>
 	<script src="./js/main.min.js"></script>
 </body>
 
