added team section

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 			@@include('./html/quote.html')
 			@@include('./html/video.html')
 			@@include('./html/blog.html')
+			@@include('./html/team.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
