--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 			@@include('./html/video.html')
 			@@include('./html/blog.html')
 			@@include('./html/team.html')
+			@@include('./html/price.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
