added map + contacts + footer sections

--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -94,7 +94,7 @@
 				</li>
 			</ul>
 			<div class="gallery__link-box">
-				<a class="gallery__link" href="#">Показать ещё</a>
+				<a class="gallery__link btn" href="#">Показать ещё</a>
 			</div>
 		</div>
 	</div>
