--- a/src/html/header.html
+++ b/src/html/header.html
@@ -24,7 +24,7 @@
 						<a class="menu__link" href="#team">Команда</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link" href="#contact">Контакты</a>
+						<a class="menu__link" href="#contacts">Контакты</a>
 					</li>
 				</ul>
 				<button class="menu-btn">
