--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
 			@@include('./html/blog.html')
 			@@include('./html/team.html')
 			@@include('./html/price.html')
+			@@include('./html/map.html')
+			@@include('./html/contacts.html')
+			@@include('./html/social.html')
 		</main>
 		@@include('./html/footer.html')
 	</div>
